--- a/templates/documents.html
+++ b/templates/documents.html
@@ -74,7 +74,7 @@
                             {% else %}
                                 <span>{{ f.nom }}</span>
                             {% endif %}
-                            <div class="doc-path text-muted">{{ f.key }}</div>
+                            <div class="doc-path text-muted">{{ f.nom }}</div>
                         </td>
 
                         <td class="doc-size">
@@ -98,7 +98,7 @@
                                 </a>
                             {% endif %}
 
-                            <form action="{{ url_for('delete_document', key=f.key) }}"
+                            <form action="{{ url_for('delete_document', key=f.nom) }}"
                                   method="POST"
                                   style="display:inline;"
                                   onsubmit="return confirm('Supprimer ce document ?');">
